--- a/frontend/todo.txt
+++ b/frontend/todo.txt
@@ -1,9 +1,12 @@
 - hacer login y registro funcional (falta con google)
-prompt:perfecto, ahora quiero que investigues todo lo necesario para hacer funcional el registro y login con google, investiga el backend para hacer las modificaciones necesarias en el usuario (modelo, serializers, views y demas) y en el frontend, también reivsa el .evn.example para poner lo necesario para que sea funcional, revisalo y dime la mejor estrategia y te digo si implementarlo o no (piensa en las rutas del backend y el frontend también)
+prompt:perfecto, ahora quiero que investigues todo lo necesario para hacer funcional el registro 
+y login con google, investiga el backend para hacer las modificaciones necesarias en el usuario 
+(modelo, serializers, views y demas) y en el frontend, también reivsa el .evn.example 
+para poner lo necesario para que sea funcional, revisalo y dime la mejor estrategia y 
+te digo si implementarlo o no (piensa en las rutas del backend y el frontend también)
 
-
-
-
+- Separar el dashboard en componentes, y cambiar el header como el de sora y en movil hacer un menu debajo como el de sora
+- Mejorar modal de style transfer
 - en el registro hacer verificación de mail si no es por google
 - hacer un ranking de fotos creadas y que los usuarios puedan elegir que este publica o privada? (estilo sora de chatgpt)
 - hacer un sistema de favoritos
