millores per likes a nes frontend

--- a/frontend/todo.txt
+++ b/frontend/todo.txt
@@ -1,12 +1,10 @@
 - hacer login y registro funcional (falta con google)
-prompt:perfecto, ahora quiero que investigues todo lo necesario para hacer funcional el registro 
-y login con google, investiga el backend para hacer las modificaciones necesarias en el usuario 
-(modelo, serializers, views y demas) y en el frontend, también reivsa el .evn.example 
-para poner lo necesario para que sea funcional, revisalo y dime la mejor estrategia y 
-te digo si implementarlo o no (piensa en las rutas del backend y el frontend también)
-
 - Mejorar modal de style transfer
 - en el registro hacer verificación de mail si no es por google
-- hacer un ranking de fotos creadas y que los usuarios puedan elegir que este publica o privada? (estilo sora de chatgpt)
-- hacer un sistema de favoritos
+- hacer un sistema de tops de fotos
+- mejorar el modal de fotos en imagenes, poder ir al estilo utilizado para esa foto y ver fotos del autor que tenga en publico,
+- en la foto de mi galeria ver si esta publica o privada, numero de likes, fecha y boton de descargar, nada mas  
 - hacer un cerrar sesión, perfil del usaurio, mejoras esteticas dashboard
+- refactorizar codigo y modularizar todo lo posible
+- hacer un sistema de monitoreo de jobs
+- hacer un sistema de rate limiting por IP/usuario
