--- a/frontend/todo.txt
+++ b/frontend/todo.txt
@@ -3,3 +3,4 @@
 - mejorar el modal de fotos en imagenes, poder ir al estilo utilizado para esa foto y ver fotos del autor que tenga en publico y que no pueda cambiar entre publica y privada tan rápido (obligar a un delay, 5 minutos)
 - hacer un cerrar sesión, perfil del usaurio, mejoras esteticas dashboard
 - refactorizar codigo y modularizar todo lo posible
+- hacer que el usuario pueda subir una foto de perfil
