--- a/frontend/todo.txt
+++ b/frontend/todo.txt
@@ -1,5 +1,6 @@
 
 - mejorar el modal de fotos en imagenes, poder ir al estilo utilizado para esa foto y ver fotos del autor que tenga en publico y que no pueda cambiar entre publica y privada tan rápido (obligar a un delay, 5 minutos)
 - refactorizar codigo y modularizar todo lo posible
-- hacer que el usuario pueda subir una foto de perfil
 - monetizacion con anuncios cuando se genera la imagen, pop up con anuncio que se cierra en 5 segundos
+- hacer que el usuario pueda borrar sus imagenes que tiene en la galeria y se borren de la web
+- arreglar el boton de descargar imagen
